<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nxtty</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="please_wait">Please Wait</string>
    <string name="enter_email">Enter Email...</string>
    <string name="enter_password">Enter Password...</string>
    <string name="confirm_password">Confirm Password...</string>
    <string name="city_of_birth">City of Birth...</string>
    <string name="enter">Enter</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="alias_name">Alias Name</string>
    <string name="subscribe">Subscribe</string>
    <!-- <string name="conversations">Conversations</string> -->
    <string name="conversations">Private Chat</string>
    <string name="contacts">Contacts</string>
    <string name="newsfeed">Newsfeed</string>
    <string name="find_users">Find Users</string>
    <string name="open_chat">Open Chat</string>
    <string name="wallet">Wallet</string>
    <string name="settings">Settings</string>
    <string name="discover">Discover</string>
    <string name="user">User:</string>
    <string name="user_group_setting">User</string>
    <string name="profile_pic">Profile Picture</string>
    <string name="city">City:</string>
    <string name="school_univercity">School:</string>
    <string name="call_end">Do you want to end this call?</string>
    <string name="game">Game</string>

    <!-- bala code -->
    <string name="validate_city">Please enter the City</string>
    <string name="validate_school_univercity">Please enter the School/University</string>
    <string name="delete_message_after">Delete Messages After</string>
    <string name="one_min">1 Minute</string>
    <string name="one_hr">1 Hour</string>
    <string name="twntyfour_hr">24 Hour</string>
    <string name="seven_days">7 days</string>
    <string name="thirty_days">30 days</string>
    <string name="never">Never</string>
    <string name="notification">Notification</string>
    <string name="automatic_logout">Automatic Logout</string>
    <string name="gender">Gender</string>
    <string name="text_size">Text Size</string>
    <string name="status_demo_text">Hey there! I am using Nxtty</string>
    <string name="support">Support</string>
    <string name="Recommend_to_Friend">Recommend to a Friend</string>
    <string name="Share_Nxtty_with_friends">Share Nxtty with friends</string>
    <string name="wallet_notice">Do you choose to redeem your 2500 Nxttycoin reward?</string>
    <string name="about">About</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="block_list">Block List</string>
    <string name="save_changes">Save Changes</string>
    <string name="log_out">Log Out</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="invite">Invite</string>
    <string name="find_user">Find User</string>
    <string name="search_by_username">Search by Username</string>
    <string name="search_by_city">Search by City</string>
    <string name="search_by_school">Search by School</string>
    <string name="friend_req">Friend Requests</string>
    <string name="invites">Invites</string>
    <string name="enter_min_charecters">Enter min 3 characters</string>
    <string name="open_chat_settings">Open Chat Settings</string>
    <string name="add_chats">Add Chats</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="groups">Groups</string>
    <string name="chat">Chat</string>
    <string name="tip">Tip</string>
    <string name="report_post">Report Post</string>
    <string name="report_user">Report User</string>
    <string name="hide_post">Hide Post</string>
    <string name="back">Back</string>
    <string name="tips">Tips</string>
    <string name="add_comment">Add Comment</string>
    <string name="create_post">Create Post</string>
    <string name="post_title">Post Title :</string>
    <string name="post_detail">Post Detail :</string>
    <string name="choose_file">Choose File</string>
    <string name="post">Post</string>
    <string name="post_comment">Post </string>
    <string name="edit_post">Edit Post</string>

    <string-array name="uploadpicoption">
        <item>Camera</item>
        <item>Gallery</item>
    </string-array>
    <string-array name="options_with_default">
        <item>Camera</item>
        <item>Gallery</item>
        <item>Restore Default Background</item>
    </string-array>
    <string-array name="share_link_option">
        <item>Open</item>
        <item>Share</item>
        <item>Copy</item>
    </string-array>

    <string name="incomingNxttyClTxt">Nxtty Voice Call</string>
    <string name="voicecallTxt">Nxtty Voice Call</string>
    <string name="outGoingNxttyClTxt">Dialing Nxtty Call</string>

    <!-- new text added -->

    <string name="already_tipped">You have already given tip for this post.</string>
    <string name="already_tipped_success">You have successfully given tip for this post.</string>
    <string name="already_tipped_comment">You have already given tip for this comment.</string>
    <string name="already_tipped_comment_success">You have successfully given tip for this comment.</string>
    <string name="sure_unblock">Are you sure you want to unblock </string>
    <string name="sure_block">Are you sure you want to block </string>
    <string name="sure_delete">Are you sure you want to delete </string>
    <string name="sure_add">Are you sure to add </string>
    <string name="sure_unsubscribe">Are you sure you want to unsubscribe from</string>
    <string name="sure_subscribe">Are you sure you want to subscribe </string>
    <string name="sure_report">Are you sure to report this post ?</string>
    <string name="sure_report_user">Are you sure to report this user ?</string>
    <string name="sure_edit">Are you sure to edit this post ?</string>
    <string name="sure_delete_post">Are you sure to delete this post ?</string>
    <string name="sure_hide_post">Are you sure to hide this post ?</string>
    <string name="sure_delete_comment">Are you sure you want to delete this comment ?</string>
    <string name="share_with_frnds">Share with Friends</string>
    <string name="hrs_ago">Hours ago</string>
    <string name="min_ago">Minute(s) ago</string>
    <string name="unsubscribe">Unsubscribe</string>

    <!-- new text added 2 -->

    <string name="network_error">Please check you internet connection.</string>
    <string name="update_success">Updated successfully</string>
    <string name="add_friends">Please add friends</string>
    <string name="enter_title">Please Enter title</string>
    <string name="enter_title_detail">Please Enter Post title and Detail</string>
    <string name="enter_details">Please Enter Details</string>
    <string name="enter_message">Please Enter Message</string>
    <string name="enter_comment">Please Enter Comment</string>
    <string name="cant_edit_image">Can\'t edit image</string>
    <string name="crop">Crop</string>
    <string name="image_invalid">Image is not valid,please choose another one.</string>
    <string name="image_not_found">Image not found.</string>
    <string name="remember_me">Remember Me</string>
    <string name="do_not_ask_me_again">Don\'t ask me again</string>
    <string name="password_backup">Please write down your login details and keep it safe, as there is no password backup.</string>
    <string name="pop_up_text_support">Please try again</string>
    <string name="comments">Comments</string>

    <!-- new text added 3 -->

    <string name="leader_board">Leaderboard</string>
    <string name="Search_group_text">Search by Alias name</string>
    <string name="search_instuction">Select a group</string>
    <string name="search_instuction_edit_text">Please enter search keyword</string>
    <string name="group_search">Group Search</string>

    <!-- Nov 14 from other developer -->

    <string name="reaction">Reactions</string>
    <!-- <string name="ok">Ok</string> -->
    <string name="avtar_use">Use avatar at open chat</string>
    <string name="private_chat">Private Chat</string>
    <string name="add_topic">Add Topic</string>
    <string name="topic_name">Topic Name</string>
    <string name="topic_description">Topic Description</string>
    <string name="topic_category">Select Topic Category</string>
    <string name="save">Save</string>

    <string-array name="topic_categories_array">
        <item>Arts &amp; Entertainment</item>
        <item>Business</item>
        <item>Environment &amp; Nature</item>
        <item>Events</item>
        <item>General News</item>
        <item>Government &amp; Politics</item>
        <item>Health</item>
        <item>Lifestyle</item>
        <item>Living Things</item>
        <item>Media</item>
        <item>Obituaries</item>
        <item>Science</item>
        <item>Social Affairs</item>
        <item>Sports</item>
        <item>Technology</item>
    </string-array>
    <!--  -->
    <string name="changeBg">Change Backround</string>
    <string name="referal_code">Referral Code (optional)</string>
    <string name="profile_pic_desc">(Avatars are not encrypted)</string>
    <string name="invites_sent">Invites sent</string>
    <string name="invites_received">Invites received</string>
    <string name="cancelUpdate">Do you want cancel the update?</string>
    <string name="code_no_longer">Referral code is no longer valid or expired.</string>
    <string name="code_incorrect">Please enter the valid referral code. </string>
    <string name="code_incorrect_">Please enter the valid referral code. </string>

    <!-- new -->
    <string name="write_story">Write a story..</string>
    <string name="save_image_sdcard">Save image to SD card ?</string>
    <string name="write_comment">Write a comment...</string>

</resources>