<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyish"
    android:orientation="vertical"
    android:id="@+id/root" >

    <!--
         <LinearLayout
        android:id="@+id/ln_MainSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp" >
    -->

    <EditText
        android:id="@+id/txtMainSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/search_rounded"
        android:drawableLeft="@drawable/search_icon"
        android:drawablePadding="5dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/Search_group_text"
        android:imeOptions="actionSearch"
        android:paddingLeft="5dp"
        android:paddingStart="5dp"
        android:singleLine="true" >
    </EditText>
    <!-- </LinearLayout> -->

    <TextView
        android:id="@+id/dumy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtMainSearch"
        android:paddingLeft="10dp"
        android:text="@string/search_instuction" />

    <LinearLayout
        android:id="@+id/dummy2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dumy"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/spin_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:prompt="@string/Recommend_to_Friend" />

        <TextView
            android:id="@+id/txt_Search_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/round_corners_white"
            android:paddingBottom="4dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:paddingTop="4dp"
            android:text="@string/search"
            android:textColor="@android:color/black"
            android:textSize="15sp" />
    </LinearLayout>

    <com.nxtty.main.LoadMoreListView
        android:id="@+id/lv_loadMore_GroupDetail_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dummy2" />

</RelativeLayout>