<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/red_off_back"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="left"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/logo_trnsp" />

            <LinearLayout
                android:id="@+id/secondLayerMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:paddingLeft="7dp"
                android:paddingRight="7dp" >

                <EditText
                    android:id="@+id/edittext_emails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_edittext"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingBottom="7dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="7dp"
                    android:textColor="@color/red"
                    android:textColorHint="@color/red"
                    android:textStyle="bold"
                    android:typeface="sans" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fourthLayerMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="25dp"
                android:paddingLeft="7dp"
                android:paddingRight="7dp" >

                <EditText
                    android:id="@+id/edittext_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_edittext"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:paddingBottom="7dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="7dp"
                    android:textColor="@color/red"
                    android:textColorHint="@color/red"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fourthLayerMain_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="25dp"
                android:paddingLeft="7dp"
                android:paddingRight="7dp" >

                <EditText
                    android:id="@+id/edittext_pass_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_edittext"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:paddingBottom="7dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="7dp"
                    android:textColor="@color/red"
                    android:textColorHint="@color/red"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/sixthLayerMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="25dp"
                android:paddingLeft="7dp"
                android:paddingRight="7dp" >

                <EditText
                    android:id="@+id/edittext_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_edittext"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                    android:hint="@string/city_of_birth"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1"
                    android:paddingBottom="7dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="7dp"
                    android:textColor="@color/red"
                    android:textColorHint="@color/red"
                    android:textStyle="bold" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/chkRemember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:button="@drawable/check_box_selector_check_uncheck"
                android:text="@string/remember_me"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:id="@+id/ln_enter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="23dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/round_edittext"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/enter"
                    android:textColor="@color/red"
                    android:textSize="20sp"
                    android:textStyle="bold" >
                </TextView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>